# CivicAI

./: .env.example  .gitignore  .uvignore  CLAUDE_SETUP.md  CONTENT_FILTERING.md  DEBATE_SYSTEMS.md  GEMINI_SETUP.md  INTEGRATION_SUCCESS.md  INTERACTIVE_DEBATE_FEATURES.md  LICENSE  MCP_SERVER_README.md  Makefile  README.md  README_MERGED_SYSTEM.md  SETUP.md  UV_MIGRATION_SUMMARY.md  about_project.md  civicai-prd.md  debug_crew.py  debug_debate.py.old  demo.py  exa-mcp.md  exa-pysdk.md  exa-webset.md  human_debate.py.old  main.py  mcp_policy_discovery_server.py  mcp_requirements.txt  package-lock.json  pyproject.toml  requirements.txt  run_debate.py  start_system.sh  start_system_fixed.sh  test_api.py  test_api_integration.py  test_claude_config.py  test_claude_simple.py  test_content_filtering.py  test_crew_fixes.py  (+17 more)
.claude/: settings.local.json
api/: a2a_integration.py  main.py
api/knowledge/debates/sessions/: PUBL047.PS.json  PUBL272.PS_init.json
knowledge/debates/messages/: msg_1edfc9e1.json  msg_2a3e0d63.json  msg_344e76f8.json  msg_392cc989.json  msg_5696efb5.json  msg_59d1868a.json  msg_5a17f142.json  msg_5dc7090a.json  msg_60c01ee5.json  msg_a75c6f85.json  msg_abf0ca8e.json  msg_b000d915.json  msg_b4faf106.json  msg_c220641c.json  msg_f5967fa8.json
knowledge/debates/sessions/: debate_4fba7c03.json  debate_a46ecc63.json  debate_ba810e4f.json  debate_ef408644.json  debug_debate_07b8286e.json  debug_debate_4a8d6407.json  debug_debate_dbea9f6f.json  demo_6d6d76ff.json  demo_e137e30a.json  test_session.json  test_session_2.json
knowledge/stakeholders/: demo_stakeholder.json  landlords.json  prospective_and_current_tenants.json  residential_landlords_and_their_agents.json  residential_tenants_and_prospective_tenants.json  tenants.json  test_stakeholder.json
policy-pulse-debate/: README.md  index.html  package-lock.json  package.json
policy-pulse-debate/src/: index.css
policy-pulse-debate/src/components/: AgenticWorkflowPanel.tsx  ChatInterface.tsx  DebatePanel.tsx  EmailGenerator.tsx  PolicyList.tsx
policy-pulse-debate/src/pages/: Index.tsx
policy-pulse-debate/src/services/: api.ts
policy_discovery/: README.md  __init__.py  agent.py  config.py  example.py  models.py  policy_discovery_agent_prompt.md  search.py  utils.py  webset_example.py  webset_manager.py
src/dynamic_crew/: config.py  crew.py  main.py  weave_client.py  weave_inference_client.py
src/dynamic_crew/config/: agents.yaml  tasks.yaml
src/dynamic_crew/debate/: __init__.py  base.py  moderator.py  personas.py
src/dynamic_crew/debate/systems/: __init__.py  debug.py  human.py  weave.py
src/dynamic_crew/examples/: __init__.py  run_debug_debate.py  run_human_debate.py  run_weave_debate.py
src/dynamic_crew/policy_discovery/: __init__.py  agent.py  config.py  models.py  search.py  utils.py
src/dynamic_crew/tools/: custom_tool.py  custom_tool.py.backup
src/dynamic_crew_automation_for_policy_analysis_and_debate/: crew.py  main.py
src/dynamic_crew_automation_for_policy_analysis_and_debate/config/: agents.yaml  tasks.yaml
test_data/: policy_1.json  policy_2.json
ui/: test-race-condition.md
ui/src/components/: DebatePanel.tsx  EmailGenerator.tsx  PolicyList.tsx
ui/src/integrations/supabase/: client.ts
ui/src/pages/: Index.tsx
ui/supabase/: config.toml
